fix: on hover text unreadable in dark mode

--- a/erpnext/public/scss/point-of-sale.scss
+++ b/erpnext/public/scss/point-of-sale.scss
@@ -607,8 +607,7 @@
 		padding: var(--padding-sm);
 
 		&:hover {
-			background-color: var(--gray-50);
-			color: var(--neutral);
+			background-color: var(--control-bg);
 		}
 
 		> .invoice-name-date {
